[package]
name = "transaction-utils"
version = "0.1.0"
edition = "2021"
authors = ["Long Tran <long.tran@cashierapp.io>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
candid = "0.10"
ic-cbor = "3.0.2"
icrc-ledger-types = "0.1.6"
serde = "1.0.210"
